--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,13 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %> <br>
+
+  <%= f.fields_for :ingredients do |ib| %>
+    <%= ib.label :name %>
+    <%= ib.text_field :name %><br/>
+    
+    <%= ib.label :quantity %>
+    <%= ib.text_field :quantity %><br/>
+  <% end %>
+  <%= f.submit %>
+<% end %>
